Fixed some typos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Launchpad by NullSoldier</title>
+    <title>Launchpad</title>
   </head>
 
   <body>
@@ -31,13 +31,13 @@
         <hr>
 
         <section id="main_content">
-          <h3>What is Spaceport?</h3>
+          <h3>What is Launchpad?</h3>
 
 <ul>
-<li>FlashDevelop plugin to help you do iOs and Android development</li>
-<li>Deploy to phones over wifi very quickly</li>
+<li>FlashDevelop plugin to help you do rapid iOS and Android development</li>
+<li>Deploy to multiple phones over wifi very quickly</li>
 <li>Test and deploy to iOS without paying for an apple developer account</li>
-</ul><p>Launchpad is a FlashDevelop plugin written in  C# designed to help you get the best our of mobile Flash development. After using Adobe Air, I was absolutely disgusted with both the deployment times, and poor FlashDevelop integration.</p>
+</ul><p>Launchpad is a FlashDevelop plugin written in  C# designed to help you get the best out of mobile Flash development. After using Adobe Air, I was absolutely disgusted with both the deployment times, and poor FlashDevelop integration.</p>
 
 <p>Having to press more than one button to deploy my phone is absolutely unacceptable. This is where Launchpad comes in. Launchpad is built on top of Spaceport. Spaceport is a tool that allows you to compile and run your games on any mobile device, as well as HTML5 and the web. With Spaceport you can quickly deploy your game to 20 phones in a matter of seconds using Wifi; something that Air absolutely cannot do.</p>
 
