--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <h3>What is Launchpad?</h3>
 
 <ul>
-<li>FlashDevelop plugin to help you do rapid iOS and Android development</li>
-<li>Deploy to multiple phones over wifi very quickly</li>
-<li>Test and deploy to iOS without paying for an apple developer account</li>
+<li>FlashDevelop plugin using <a href="http://spaceport.io">Spaceport</a> for iOS/Android development</li>
+<li>Rapid iteration to mobile devices over Wifi</li>
+<li>Run your game on iOS without paying for an apple dev account</li>
 </ul><p>Launchpad is a FlashDevelop plugin designed to help you get the best out of mobile Flash development. Quick iteration is the key to successful game development, which is why I created Launchpad. It's a plugin built on top of Spaceport to give you excellent FlashDevelop integration while significantly decreasing your iteration times.</p>
 
 <p>Having to press more than one button to deploy your game to all of your devices is too much work. This is where Launchpad comes in. Launchpad is built on top of Spaceport. Spaceport is a tool that allows you to compile and run your games on any mobile device, as well as HTML5 and the web. With Spaceport you can quickly deploy your game to 20 phones in a matter of seconds using Wifi; something that Air can't do.</p>
