--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <li>FlashDevelop plugin using <a href="http://spaceport.io">Spaceport</a> for iOS/Android development</li>
 <li>Rapid iteration to mobile devices over Wifi</li>
 <li>Run your game on iOS without paying for an apple dev account</li>
-</ul><p>Launchpad is a FlashDevelop plugin designed to help you get the best out of mobile Flash development. Quick iteration is the key to successful game development, which is why I created Launchpad. It's a plugin built on top of Spaceport to give you excellent FlashDevelop integration while significantly decreasing your iteration times.</p>
+</ul></ul><p>Launchpad is a FlashDevelop plugin designed to help you get the best out of mobile Flash development. It focuses on reducing iteration times with mobile devices. It does this by allowing you to deploy your game to multiple devices over WIFI at the same time with the same FlashDevelop workflow you've gotten used to.</p>
 
-<p>Having to press more than one button to deploy your game to all of your devices is too much work. This is where Launchpad comes in. Launchpad is built on top of Spaceport. Spaceport is a tool that allows you to compile and run your games on any mobile device, as well as HTML5 and the web. With Spaceport you can quickly deploy your game to 20 phones in a matter of seconds using Wifi; something that Air can't do.</p>
+<p>The greatest advantage of Launchpad is that you never have to leave your comfortable IDE environment on windows while still utilizing iOS development. With the power of Spaceport, you can develop and deploy to iOS without ever paying for an apple developer account. Thanks to the power of Spaceport, developing on iOS without ever touching troublesome iOS provisioning profiles or certificates. All you have to do is push your game over Wifi to a do-nothing free app that you can easily get on the appstore.</p>
 
-<p>Since Launchpad is well integrated into FlashDevelop. The greatest advantage is that you never have to leave your comfortable IDE environment on windows while still utilizing iOS development. With the power of Spaceport, you can develop and deploy to iOS without ever paying for an apple developer account. Because you can push your game over Wifi, you can just download a free do-nothing app onto your phone that you can push to without even touching nasty provisioning profiles or certificates.</p>
+<p>Check out Spaceport here, http://spaceport.io where you can download and try out their command line tools.</a>
         </section>
 
         <footer>
