--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <p>The greatest advantage of Launchpad is that you never have to leave your comfortable IDE environment on windows while still utilizing iOS development. With the power of Spaceport, you can develop and deploy to iOS without ever paying for an apple developer account. Thanks to the power of Spaceport, developing on iOS without ever touching troublesome iOS provisioning profiles or certificates. All you have to do is push your game over Wifi to a do-nothing free app that you can easily get on the appstore.</p>
 
-<p>Check out Spaceport here, http://spaceport.io where you can download and try out their command line tools.</a>
+<p>Check out Spaceport here, <a href="http://spaceport.io">http://spaceport.io</a> where you can download and try out their command line tools.</a>
         </section>
 
         <footer>
