--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Launchpad</h1>
-          <h2>A spaceport plugin for Flash Develop</h2>
+          <h2>A plugin for FlashDevelop to use Spaceport</h2>
         </header>
 
         <section id="downloads" class="clearfix">
